--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "readable-stream": "~2.2.2",
     "realize-package-specifier": "~3.0.3",
     "request": "~2.78.0",
+    "requiresafe": "~2.0.3",
     "retry": "~0.10.0",
     "rimraf": "~2.5.4",
     "semver": "~5.3.0",
