--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       # only gather coverage info for LTS
       env: DEPLOY_VERSION=testing COVERALLS_REPO_TOKEN="$COVERALLS_OPTIONAL_TOKEN"
       script:
-        - "node . run tap-cover -- \"test/tap/*.js\""
+        - "node . run tap-cover -- \"test/tap/*.js\" \"test/tap/network/*.js\""
         - "unset COVERALLS_REPO_TOKEN ; node . run tap -- \"test/broken-under-*/*.js\""
     # previous LTS is next most important
     - node_js: "4"
@@ -43,7 +43,6 @@ cache:
 install:
   - "node . prune"
   - "node . rebuild --depth=0"
-  - "node . install --ignore-scripts"
-  - "make -j4 doc"
+  - "node . install"
 script:
-  - "node . run tap -- \"test/tap/*.js\" \"test/broken-under-nyc/*.js\""
+  - "node . run tap -- \"test/tap/*.js\" \"test/network/*.js\" \"test/broken-under-nyc/*.js\""
